@startuml
' Class diagram - Shared module (current codebase)
skinparam classAttributeIconSize 0
left to right direction

package "com.auction.shared.model" {
  abstract class Entity {
    - id: int
  }
}

package "user" {
  abstract class User {
    - username: String
    - password: String
    - email: String
    - banned: boolean
    + getRoleName(): String
  }

  class Bidder {
    - accountBalance: double
  }

  class Seller {
    - rating: double
    - accountBalance: double
  }

  class Admin {
    - accessLevel: String
  }

  class Transaction {
    - userId: int
    - amount: double
    - type: String
    - description: String
    - time: LocalDateTime
  }
}

package "item" {
  abstract class Item {
    - name: String
    - description: String
    - seller: User
  }

  class Electronics {
    - warrantyMonths: int
  }

  class Art {
    - author: String
  }

  class Vehicle {
    - brand: String
  }

  class ItemFactory <<Factory Method>> {
    + create(type, id, name, description, seller, extraParam): Item
    + normalizeType(type): String
  }
}

package "auction" {
  class AuctionSession {
    - seller: User
    - winner: User
    - item: Item
    - startingPrice: double
    - currentPrice: double
    - startTime: LocalDateTime
    - endTime: LocalDateTime
    - bids: List<Bid>
    - status: AuctionStatus
    + updateCurrentPrice(bid): void
    + isActive(): boolean
  }

  class Bid {
    - bidder: User
    - auctionSession: AuctionSession
    - amount: double
    - time: LocalDateTime
  }

  enum AuctionStatus {
    OPEN
    RUNNING
    FINISHED
    PAID
    CANCELED
  }
}

package "protocol" {
  class Message {
    - type: MessageType
    - data: Object
    - success: boolean
    - errorMessage: String
    - correlationId: String
  }

  enum MessageType
}

Entity <|-- User
User <|-- Bidder
User <|-- Seller
User <|-- Admin
Entity <|-- Item
Item <|-- Electronics
Item <|-- Art
Item <|-- Vehicle
Entity <|-- AuctionSession
Entity <|-- Bid
Entity <|-- Transaction

ItemFactory ..> Item : creates
AuctionSession --> Item
AuctionSession --> User : seller/winner
AuctionSession "1" o-- "0..*" Bid
Bid --> User : bidder
AuctionSession --> AuctionStatus
Message --> MessageType
@enduml